# Event_Management_Trainee

./: README.md  pyproject.toml
event_management_app/: hooks.py
event_management_app/event_management/dashboard_chart/event_count_chart/: event_count_chart.json
event_management_app/event_management/doctype/attendee/: attendee.js  attendee.json  attendee.py  test_attendee.py
event_management_app/event_management/doctype/cheif_guest/: cheif_guest.js  cheif_guest.json  cheif_guest.py  test_cheif_guest.py
event_management_app/event_management/doctype/cheif_guest_table/: cheif_guest_table.json  cheif_guest_table.py
event_management_app/event_management/doctype/events/: events.js  events.json  events.py  test_events.py
event_management_app/event_management/doctype/sponsor_table/: sponsor_table.json  sponsor_table.py
event_management_app/event_management/doctype/sponsors/: sponsors.js  sponsors.json  sponsors.py  test_sponsors.py
event_management_app/event_management/doctype/volunteers/: test_volunteers.py  volunteers.js  volunteers.json  volunteers.py
event_management_app/event_management/event_management_dashboard/event_dashboard/: event_dashboard.json
event_management_app/event_management/print_format/volunteer_id/: volunteer_id.json
event_management_app/event_management/report/attendees_report/: attendees_report.json
event_management_app/event_management/report/attendees_report_view/: attendees_report_view.json
event_management_app/event_management/report/events_test_report/: events_test_report.json
(+4 files in other folders)
